 - Extended the functionality of cccheckout. It can check (notco) to see if
  the desired element is already checked out to the current view. Thus it
   won't attempt to check it out again.
 - Added three new ClearCase commands: ccmkattr, ccmkdir, ccmkelem
  Bugzilla Report 26253.

* add description attributes to macrodef attributes and elements.
  Bugzilla Report 24711.

* add textname attribute to macrodef.

Changes from Ant 1.6.B3 to Ant 1.6.0
====================================

Changes that could break older environments:
--------------------------------------------

* Attempts to read input in <java> and <exec> tasks will now receive an EOF
  rather than blocking. If you run such a process and rely on it blocking, as
  it would do in Ant 1.5, you may have problem.

* <checksum> message "calculating checksum" downgraded to MSG_VERBOSE
  to limit output in case of large filesets.
  Bugzilla Report 25607.

* Change logging level of captured standard error output from MSG_ERR to MSG_WARN.
  Previous some standard error was output as MSG_ERR and some as MSG_WARN (namely
  standard error from exec and forked jvms).

Fixed bugs:
-----------

* <xmlcatalog>s only worked when defined inside of tasks.  Bugzilla
  Report 20965.

* <xmlcatalog> Wrong file location to URL conversion in XMLCatalog.
  Bugzilla Report 23913.

* <checksum> was throwing a null pointer exception, when used with nested filesets
  and totalproperty attribute not set.
  Bugzilla Report 25606.

Other changes:
--------------

Changes from Ant 1.6.B2 to Ant 1.6.B3
=====================================

Changes that could break older environments:
--------------------------------------------
* Changed namespace processing. The namespace uri
  of nested elements of a type or a task are now the
  same as the type or task. Previously the namespace uri
  of nested elements was ant's namespace uri. This change will affect users
  of ant 1.6b1 and ant 1.6b2.
