@@ -53,9 +53,10 @@ attribute are:</a></p>
   <li><code>classic</code> (the standard compiler of JDK 1.1/1.2) &ndash;
       <code>javac1.1</code> and
       <code>javac1.2</code> can be used as aliases.</li>
-  <li><code>modern</code> (the standard compiler of JDK 1.3/1.4) &ndash;
+  <li><code>modern</code> (the standard compiler of JDK 1.3/1.4/1.5) &ndash;
       <code>javac1.3</code> and
-      <code>javac1.4</code> can be used as aliases.</li>
+      <code>javac1.4</code> and
+      <code>javac1.5</code> can be used as aliases.</li>
   <li><code>jikes</code> (the <a
     href="http://oss.software.ibm.com/developerworks/opensource/jikes/" target="_top">Jikes</a>
     compiler).</li>
@@ -236,7 +237,7 @@ invoking the compiler.</p>
     <td valign="top">Generate class files for specific VM version
     (e.g., <code>1.1</code> or <code>1.2</code>). <b>Note that the
     default value depends on the JVM that is running Ant.  In
-    particular, if you use JDK 1.4 the generated classes will not be
+    particular, if you use JDK 1.4+ the generated classes will not be
     usable for a 1.1 Java VM unless you explicitly set this attribute
     to the value 1.1 (which is the default value for JDK 1.1 to
     1.3).</b></td>
@@ -311,12 +312,12 @@ invoking the compiler.</p>
     <td valign="top">source</td>
 
     <td valign="top">Value of the <code>-source</code> command-line
-    switch; will be ignored by all implementations except
+    switch; will be ignored by all implementations prior to
     <code>javac1.4</code> (or <code>modern</code> when Ant is not
     running in a 1.3 VM) and <code>jikes</code>.<br> If you use this
     attribute together with <code>jikes</code>, you must make sure
     that your version of jikes supports the <code>-source</code>
-    switch.<br> Legal values are <code>1.3</code> and <code>1.4</code>
+    switch.<br> Legal values are <code>1.3</code>, <code>1.4</code> and <code>1.5</code>
     &ndash; by default, no <code>-source</code> argument will be used
     at all.</td>
 
@@ -595,7 +596,7 @@ while all others are <code>false</code>.</p>
 <code>&lt;javac&gt;</code>.</p>
 
 <hr>
-<p align="center">Copyright &copy; 2000-2003 Apache Software Foundation.
+<p align="center">Copyright &copy; 2000-2004 Apache Software Foundation.
 All rights Reserved.</p>
 
 </body>
